bugfix with overflow in firefox

--- a/css/evalquiz.css
+++ b/css/evalquiz.css
@@ -55,3 +55,7 @@ code {
 .md-actions .md-button {
     margin-left: 10px;
 }
+
+ng-view {
+    overflow: hidden;
+}
